2011-04-11  Ivan Maidanski  <ivmai@mail.ru> (mostly really Jim Meyering)

	* configure.host: Remove doubled words in comments.
	* os_dep.c: Ditto.
	* doc/README: Ditto.
	* extra/setjmp_t.c: Ditto.
	* tests/huge_test.c: Ditto.
	* extra/setjmp_t.c (getpagesize, nested_sp, main, g): Replace the
	K&R-style function definition with the ANSI C one.
	* extra/setjmp_t.c: Expand all tabs to spaces.
	* extra/setjmp_t.c (nested_sp): Implement in the same way as
	GC_approx_sp.

2011-04-10  Ivan Maidanski  <ivmai@mail.ru> (really Iain Sandoe, Mike Stump)

	* dyn_load.c (GC_dyld_sections): Add more sctions.
	* dyn_load.c (GC_dyld_add_sect_fmts): New static varaible.
	* dyn_load.c (L2_MAX_OFILE_ALIGNMENT): New macro.
	* dyn_load.c (GC_dyld_image_add, GC_dyld_image_remove): Improve
	logging; add support for on-demand sections.
	* dyn_load.c (GC_dyld_image_add, GC_dyld_image_remove): Reformat
	the code.

2011-04-10  Ivan Maidanski  <ivmai@mail.ru>

	* gcj_mlc.c (GC_gcj_malloc_initialized): Use STATIC unless
	GC_ASSERTIONS.
	* include/private/gc_priv.h (GC_gcj_malloc_initialized): Don't
	declare (as external) unless GC_ASSERTIONS.
	* os_dep.c (GC_win32_free_heap): Clear GC_heap_bases[] also for
	Cygwin; add FIXME.
	* include/private/gcconfig.h: Include <sys/unistd.h> for RTEMS.
	* include/private/gcconfig.h: Add "#error" for every "-->" mark.
	* include/private/gcconfig.h (CLEAR_DOUBLE): Turn the code into
	an expression.
	* include/private/pthread_support.h (SUSPENDED_EXT): Add new flag
	(which existed previously as SUSPENDED and still exists in GCJ).
	* include/private/pthread_support.h (DISABLED_GC): Change the
	value (as it is already used by SUSPENDED_EXT).

2011-04-10  Ivan Maidanski  <ivmai@mail.ru> (mostly really Iain Sandoe)

	* tests/test.c (reverse_test):  Modify count (BIG) for
	ppc64-darwin.

2011-04-09  Ivan Maidanski  <ivmai@mail.ru>

	* reclaim.c (GC_print_all_errors): Recognize new GC_ABORT_ON_LEAK
	macro and environment variable; abort if any error has been